# learnogl

./: CMakeLists.txt  main.cpp
src/coordinate/: fragment.glsl  test_coordinate.cpp  vertex.glsl
src/helloshader/: helloshader.cpp
src/hellotriangle/: hellotriangle.cpp
src/hellowindow/: hellowindow.cpp
src/shader/: fragment.glsl  hell_shader_fragment.glsl  test_trans_fragment.glsl  test_trans_vertex.glsl  vertex.glsl
src/test_texture/: test_texture.cpp
src/testcamera/: testcamera.cpp
src/trans/: test_trans.cpp
src/utils/: shader.h  utils.h
